cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_320.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/x509/by_dir.c:224: error: DEAD_STORE
  The value written to &postfix (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/x509/by_dir.c:224:5: Write of unused value
222.       BUF_MEM *b = NULL;
223.       X509_OBJECT stmp, *tmp;
224.       const char *postfix = "";
           ^
225.   
226.       if (name == NULL)
